k8s/play/0211/wine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: white-wine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: white-wine
  template:
    metadata:
      labels:
        app: white-wine
    spec:
      containers:
      - name: white-wine
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: white-wine-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: white-wine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-wine-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red-wine
  template:
    metadata:
      labels:
        app: red-wine 
    spec:
      containers:
      - name: red-wine 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: red-wine-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: red-wine
